# yupdates-sdk-py

./: .gitignore  LICENSE  README.md  setup.cfg
src/yupdates/: __init__.py  client.py  models.py  yapi.py
