[metadata]
name = yupdates
version = 0.0.2
author = Reed Bend Software, Inc.
author_email = tim@yupdates.com
description = Yupdates Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yupdates/yupdates-sdk-py
project_urls =
    Tracker = https://github.com/yupdates/yupdates-sdk-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

# dataclasses were introduced in Python 3.7:
python_requires = >=3.7

[options.packages.find]
where = src
